--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
         "plugin:@typescript-eslint/recommended"
     ],
     "overrides": [
+        {
+            "files": ["*.ts", "*.tsx"]
+        }
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
